--- a/app/src/main/res/layout/activity_room.xml
+++ b/app/src/main/res/layout/activity_room.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/ll_room_content"
@@ -39,7 +39,8 @@
     <LinearLayout
         android:id="@+id/linear_new_container"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
+        android:layout_height="match_parent"
+        android:layout_marginTop="40dp"
         android:layout_weight="1"
         android:orientation="vertical">
 
@@ -63,6 +64,44 @@
                     android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:visibility="gone" />
+
+                <RelativeLayout
+                    android:id="@+id/rll_mic_user_control_view"
+                    android:layout_width="match_parent"
+                    android:visibility="gone"
+                    android:layout_height="match_parent">
+
+                    <LinearLayout
+                        android:id="@+id/ll_mic_user_control_view"
+                        android:layout_width="50dp"
+                        android:layout_height="match_parent"
+                        android:layout_alignParentRight="true"
+                        android:layout_marginRight="3dp"
+                        android:gravity="center"
+                        android:orientation="vertical">
+
+                        <ImageView
+                            android:id="@+id/iv_mic_user_control_music"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp"
+                            android:padding="5dp"
+                            android:src="@drawable/ic_mic_control_music" />
+
+                        <ImageView
+                            android:id="@+id/iv_mic_user_control_camera"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp" android:padding="5dp"
+                            android:layout_marginBottom="15dp"
+                            android:layout_marginTop="15dp"
+                            android:src="@drawable/ic_mic_control_camera" />
+
+                        <ImageView
+                            android:id="@+id/iv_mic_user_control_beauty"
+                            android:layout_width="40dp"
+                            android:layout_height="40dp" android:padding="5dp"
+                            android:src="@drawable/ic_mic_control_beautify" />
+                    </LinearLayout>
+                </RelativeLayout>
             </com.fubang.lihaovv.view.ScaleLayout>
 
             <com.fubang.lihaovv.view.ScaleLayout
@@ -155,11 +194,11 @@
 
                         <ImageView
                             android:id="@+id/follow_new_image"
-                            android:layout_width="30dp"
-                            android:layout_height="30dp"
+                            android:layout_width="40dp"
+                            android:padding="5dp"
+                            android:layout_height="40dp"
                             android:layout_gravity="center_vertical"
-                            android:padding="4dp"
-                            android:src="@mipmap/follow_icon" />
+                            android:src="@drawable/ic_mic_control_fav" />
 
                         <ImageView
                             android:id="@+id/test_new_full"
@@ -229,6 +268,8 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:visibility="gone"
         android:clickable="true"
         android:orientation="vertical">
 
@@ -291,9 +332,9 @@
                 android:id="@+id/room_new_gift"
                 android:layout_width="32dp"
                 android:layout_height="32dp"
-                android:layout_gravity="center"
                 android:layout_margin="5dp"
-                android:src="@mipmap/liwu" />
+                android:layout_gravity="center"
+                android:src="@drawable/ic_gift" />
         </LinearLayout>
 
         <LinearLayout
@@ -332,4 +373,5 @@
 
         </RelativeLayout>
     </LinearLayout>
-</LinearLayout>
+    <include layout="@layout/activity_live_music_lrc" />
+</RelativeLayout>
