--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -59,4 +59,6 @@
     <color name="male_rblue">#758ae7</color>
     <color name="gray_deep">#647072</color>
     <color name="color_main">#24d7c8</color>
+    <color name="color_music_title">#344150</color>
+    <color name="login_qq">#2bd2e7</color>
 </resources>
